[package]
name = "rustyf4se"
version = "0.1.0"
authors = ["rzkyif <rykzius@gmail.com>"]
edition = "2018"
publish = false

[lib]
name = "rustyf4se"
path = "./src/rs/lib.rs"
crate_type = ["staticlib"]

[dependencies]
cxx = "1.0.82"
libc = "0.2.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
